# s3-seek-archive

./: .gitignore  Cargo.toml  README.md  archive.db
python-reader/: pyproject.toml  requirements.txt  s4_reader.py  s4a_reader.py
rust-compressor/: Cargo.toml
rust-compressor/s4-utils/: Cargo.toml
rust-compressor/s4-utils/src/: compress_utils.rs  header_utils.rs  lib.rs
rust-compressor/src/: main.rs
s4-utils/: Cargo.toml
s4-utils/src/: lib.rs
src/: archive_utils.rs  main.rs
src/archive_utils/: compress_utils.rs
