[package]
name = "s3-seek-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
walkdir = "2.5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-lzma = "0.6.0"
rayon = { version = "1.10.0" }